--- a/static/form.html
+++ b/static/form.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Form</title>
 </head>
 <body>
-
+<form method="POST" action="/form">
+    <label for="nameField">Name</label>
+    <input
+            id="nameField"
+            name="name"
+            type="text"
+    />
+    <label for="addressField">Address</label>
+    <input
+            id="addressField"
+            name="address"
+            type="text"
+    />
+    <input type="submit" value="submit" />
+</form>
 </body>
 </html>
